@@ -56,8 +56,8 @@ AC_SUBST(PLUGINDIR)
 dnl the two versions here implicate the gstreamer core and gst-plugins
 dnl release versions.
 GST_MAJORMINOR=0.10
-GST_REQS=0.10.22
-GSTPLUG_REQS=0.10.22.4
+GST_REQS=0.10.23.2
+GSTPLUG_REQS=0.10.23.2
 
 HAVE_GSTREAMER=no
 
