@@ -1,4 +1,12 @@
 2009-07-16  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
+
+	* src/backend/bacon-video-widget-gst-0.10.c:
+	* configure.ac:
+	Require the lastest gstreamer and gst-plugins-base pre-releases
+	for many playbin2 related bugfixes and remove some backward
+	compatibility code.
+
+2009-07-16  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
 	
 	* src/backend/bacon-video-widget-gst-0.10.c:
 	Try to mount GIO locations that are not mounted yet (Closes: #588079).
